[package]
name = "mio-websocket"
version = "0.1.0"
authors = ["Nikita Baksalyar <nikita.baksalyar@gmail.com>"]

[dependencies]
http-muncher = "0.2"
sha1 = "0.1"
rustc-serialize = "0.3"
bytes = "0.3"
byteorder = "0.3"
log = "0.3"
websocket-essentials = { git = "https://github.com/nbaksalyar/rust-websocket-essentials" }
mio = "0.5.0"

[dev-dependencies]
env_logger = "0.3"
